# happy_voice

happy_stt/: Dockerfile  app.py  beep.py  setup.py
happy_stt/happy_stt/: launch_stt.py  launch_stt_server.py  speech_to_text.py
happy_tts/happy_tts/: launch_tts_server.py  text_to_speech.py
happy_voice/happy_voice/: yes_no.py
happy_voice/launch/: launch_voice_system.launch.py
happy_voice_msgs/: CMakeLists.txt  package.xml
happy_voice_msgs/action/: YesNo.action
